# Voter_Registration

./: CMakeLists.txt  Democratic_Voter.cpp  Democratic_Voter.h  Other_Voter.cpp  Other_Voter.h  README.md  Republican_Voter.cpp  Republican_Voter.h  Voter.cpp  Voter.h  main.cpp  voter_data_analysis.py
